# AndfixDemo

./: README.md
apkpatch-1.0.3/: new.apk  old.apk  新建文本文档.txt
apkpatch-1.0.3/diffOut/: diff.dex  out.apatch
apkpatch-1.0.3/diffOut/smali/com/sxy/andfixdemo/: Calculate_CF.smali
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/sxy/andfixdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: art_7_0.cpp  art_7_0.h  art_method.cpp  art_method.h  dalvik_method.cpp  dalvik_method.h
app/src/main/java/com/alipay/euler/andfix/annotation/: MethodReplace.java
app/src/main/java/com/sxy/andfixdemo/: Calculate.java  FixManager.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sxy/andfixdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
